# niet2code

./: .gitignore  Cargo.toml  Makefile  README.md  cookathon.md  foundry.toml  privy_auth_state.json
lib/forge-std/src/: StdChains.sol  Vm.sol
lib/forge-std/test/: StdChains.t.sol  StdUtils.t.sol
prover/: Cargo.toml
prover/src/: main.rs
script/: Deploy.s.sol
scripts/: deploy_mantle.sh
verifier-contract/: Cargo.toml
verifier-contract/src/: main.rs
zk-cli/: Cargo.toml
zk-cli/src/: main.rs  privy_integration.rs  thirdweb_integration.rs
