[workspace]
resolver = "3"
members = [
    "prover",
    "zk-cli"
]
# Note: verifier-contract is excluded because it needs special PolkaVM compilation

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Cookathon Builder <builder@cookathon.dev>"]
license = "Apache-2.0"

[workspace.dependencies]
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
rand = "0.8"
anyhow = "1.0.98"