# zk-cli/Cargo.toml
[package]
name = "niet2code-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
# Existing ZK dependencies
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
rand = "0.8"

# CLI and serialization
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling and utilities
anyhow = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
prover = { path = "../prover" }
